Fix width on mobile home

--- a/src/index.css
+++ b/src/index.css
@@ -523,7 +523,7 @@ a {
   .homeContainer {
     background-color: grey;
     text-align: center;
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
